| Bug #58914 | Valgrind warning in rpl_make_log_name() | ||
|---|---|---|---|
| Submitted: | 14 Dec 2010 9:57 | Modified: | 6 Jan 2011 4:58 |
| Reporter: | Alexander Nozdrin | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Replication | Severity: | S1 (Critical) |
| Version: | 5.6 | OS: | Any |
| Assigned to: | Mats Kindahl | CPU Architecture: | Any |
[14 Dec 2010 9:57]
Alexander Nozdrin
[14 Dec 2010 21:55]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/126850 3427 Mats Kindahl 2010-12-14 Bug #58914: Valgrind warning in rpl_make_log_name() Adding calls to my_free to free the memory allocated for: - log_bin_basename - log_bin_index - relay_log_basename - relay_log_index
[17 Dec 2010 12:56]
Bugs System
Pushed into mysql-trunk 5.6.1 (revid:georgi.kodinov@oracle.com-20101217125013-y8pb3az32rtbplc9) (version source revid:mats.kindahl@oracle.com-20101214215441-o3vsxdg3eowg0ix5) (merge vers: 5.6.1) (pib:24)
[6 Jan 2011 4:58]
Jon Stephens
Does not appear in a release; no changelog entry needed. Closed.
