Bug #58914: Valgrind warning in rpl_make_log_name()

Adding calls to my_free to free the memory allocated for:
- log_bin_basename
- log_bin_index
- relay_log_basename
- relay_log_index